--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <title>Rod's Crystal Collector Game</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
@@ -26,7 +25,7 @@
     <div id="instructions">
       <p>You will be given a random number at the beginning of the game.</p>
       <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your score.</p>
-      <p>You win the game by matching your total score to random number, you lose the game if your totl score goes above the random number.</p>
+      <p>You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</p>
       <p>The value of each crystal is hidden from you until you click on it.</p>
       <p>Each time when the game starts, the game will change the values of each crystal.</p>
     </div>
@@ -35,18 +34,11 @@
 
       <div class="empty-div-target"></div>
       
-      <div class="empty-win-lose">
-          <!-- <p>Wins: <span id="wins">test</span></p>
-          <p>Losses: <span id="losses">test</span></p> -->
-      </div>
+      <div class="empty-win-lose"></div>
+
     </div>
 
-    <div class="empty-gemstones clearfix">
-      <!-- <img class="gemstones-img" src="assets/images/blue-crystal.jpg">
-      <img class="gemstones-img" src="assets/images/red-crystal.jpg">
-      <img class="gemstones-img" src="assets/images/green-crystal.jpg">
-      <img class="gemstones-img" src="assets/images/yellow-crystal.jpg"> -->
-    </div>
+    <div class="empty-gemstones clearfix"></div>
     
     <div id="score-title">
       <p>Your total score is:</p>
